[gd_scene load_steps=5 format=3 uid="uid://bsmbmwt146eh8"]

[ext_resource type="Script" path="res://scenes/objects/pilars/pilars.gd" id="1_ilaq5"]
[ext_resource type="Texture2D" uid="uid://c3ry4itv1ovgd" path="res://scenes/objects/pilars/pilar.png" id="2_sujym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dipp6"]
size = Vector2(75, 528)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ny2t8"]
size = Vector2(35, 165)

[node name="Pilars" type="StaticBody2D" groups=["Pilars"]]
collision_layer = 16
script = ExtResource("1_ilaq5")

[node name="TopPilar" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0.000224081, -358.471)
rotation = -3.14159
scale = Vector2(1, 1.94204)
texture = ExtResource("2_sujym")

[node name="PilarCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -393.5)
shape = SubResource("RectangleShape2D_dipp6")

[node name="TopPilar2" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 316.042)
scale = Vector2(1, 1.99306)
texture = ExtResource("2_sujym")

[node name="PilarCollision2" type="CollisionShape2D" parent="."]
position = Vector2(0, 345)
shape = SubResource("RectangleShape2D_dipp6")

[node name="PilarDespawnCD" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ScoringArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoringArea"]
position = Vector2(53.5, -25.5)
shape = SubResource("RectangleShape2D_ny2t8")

[node name="LosinArea" type="Area2D" parent="."]

[node name="LosingCollision" type="CollisionShape2D" parent="LosinArea"]
position = Vector2(0, 345)
shape = SubResource("RectangleShape2D_dipp6")

[node name="LosingCollision2" type="CollisionShape2D" parent="LosinArea"]
position = Vector2(0, -393.5)
shape = SubResource("RectangleShape2D_dipp6")

[connection signal="body_entered" from="ScoringArea" to="." method="_on_scoring_area_body_entered"]
[connection signal="body_entered" from="LosinArea" to="." method="_on_losin_area_body_entered"]
